--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "url": "https://github.com/yankouskia/additional_5/issues"
   },
   "devDependencies": {
-    "mocha": "^10.1.0"
+    "eslint": "^8.47.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "mocha": "^10.1.0",
+    "typescript": "^5.1.6",
+    "typescript-language-server": "^3.3.2"
   },
   "homepage": "https://github.com/yankouskia/additional_5#readme"
 }
